dependency management changed and log colors changed